fix of buttons with z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -42,6 +42,7 @@
   align-items: center;
   justify-content: space-between;
   width: 25%;
+  z-index: 2;
 }
 
 .recipe-of-the-day-small img {
@@ -65,6 +66,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 2;
 }
 
 /* Basic navbar item */
